# Fennix

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  DAPI.hpp  Dockerfile  Doxyfile  Fennix Bootloader.code-workspace  Fennix Drivers.code-workspace  Fennix Kernel.code-workspace  Fennix Lynx.code-workspace  Fennix Userspace.code-workspace  Fennix Website.code-workspace  Fennix.code-workspace  Fex.hpp  INSTALL.md  ISSUES.md  KConfig.cpp  KThread.cpp  Kernel.cpp  KernelConfig.cpp  KernelShell.cpp  KernelThread.cpp  LICENSE  LICENSES.md  Lynx.code-workspace  Makefile  Makefile.conf  README.md  SECURITY.md  STYLE_GUIDE.md  TODO.md  boot_logo.cpp  cliff.toml  compose.yaml  config.mk  driver.template  (+12 more)
.devcontainer/: Dockerfile  devcontainer.json
Audio/: Makefile
BIOS/: Makefile  boot.asm
Bootloader/: .editorconfig  .gitignore  Makefile  README.md
Core/: AdvancedConfigurationAndPowerInterface.cpp  CPU.cpp  CrashHandler.cpp  Debugger.cpp  DifferentiatedSystemDescriptionTable.cpp  Disk.cpp  Driver.cpp  InterruptsManager.cpp  Lock.cpp  PeripheralComponentInterconnect.cpp  Power.cpp  README.md  Random.cpp  StackCheck.cpp  StackGuard.c  StackGuard.cpp  Symbols.cpp  SystemCalls.cpp  SystemManagementBIOS.cpp  Time.cpp  Timer.cpp  UndefinedBehaviorSanitization.c  UniversalAsynchronousReceiverTransmitter.cpp  crashhandler.hpp  smbios.hpp  ubsan.h
Disk/: Makefile
Drivers/: .gitignore  BuiltinDriverLoader.cpp  Makefile  config.mk  drv.hpp
Execute/: BinaryParse.cpp  Parse.cpp  Spawn.cpp
ExecutionLayer/: BinaryParse.cpp  Spawn.cpp
FennixLoader/: Bootstrap.asm  Debugger.cpp  LoadElf.cpp  Loader.cpp  Makefile  UndefinedBehaviorSanitization.c  UniversalAsynchronousReceiverTransmitter.cpp  cxxabi.cpp  ega.c  linker.ld  loadelf.hpp
FileSystem/: FileDescriptor.cpp  FileNode.cpp  Filesystem.cpp  Kernel_IO.cpp  Makefile
GUI/: GUITools.cpp  GraphicalUserInterface.cpp  WidgetEvents.cpp  Widgets.cpp  Window.cpp  WindowEvents.cpp  icons.hpp
Generic/: Makefile
Input/: Makefile
Kernel/: .editorconfig  .gitignore  DAPI.hpp  Doxyfile  Fex.hpp  KThread.cpp  Kernel.cpp  KernelConfig.cpp  LICENSES.md  Makefile  README.md  TODO.md  dump.sh  gdb_printers.py  ipc.h  kernel.cpp  kernel.h  kernel_config.cpp  kernel_note.cpp  kernel_thread.cpp  kernel_vfs.cpp  syscalls.h
KernelShell/: Shell.cpp  cmds.hpp
Lynx/: Doxyfile  README.md
Modules/: BuiltinModuleLoader.cpp  drv.hpp
Network/: AddressResolutionProtocol.cpp  Checksum.cpp  DomainNameSystem.cpp  DynamicHostConfigurationProtocol.cpp  Ethernet.cpp  InternetControlMessageProtocol.cpp  InternetProtocol.cpp  Makefile  NetworkController.cpp  NetworkDebugger.cpp  NetworkTimeProtocol.cpp  TransmissionControlProtocol.cpp  UserDatagramProtocol.cpp
Profiling/: cyg.cpp  gcov.cpp  gprof.cpp
Recovery/: RecoveryMain.cpp
Storage/: Makefile
SystemCalls/: Linux.cpp  Native.cpp  Syscalls.cpp
Tasking/: InterProcessCommunication.cpp  Multi.cpp  Process.cpp  Scheduler.cpp  Security.cpp  Task.cpp  Thread.cpp
Tests/: CPUID.cpp  Marco.cpp  MemoryAllocation.cpp  MemoryOperations.cpp  RandomNumberGenerator.cpp  String.cpp  TestSyscalls.c  TypeSize.cpp  std.cpp  t.h
UEFI/: Makefile
Userspace/: .editorconfig  .gitignore  .gitmodules  Fennix C Library.code-workspace  Fennix Core Utilities.code-workspace  LICENSE  Makefile
Userspace/coreutils/: CMakeLists.txt
Userspace/coreutils/include/: coreutils.h
Userspace/coreutils/src/: admin.c  alias.c  arch.c  echo.c  sh.c  test.c  uname.c
Userspace/libc/: CMakeLists.txt  Makefile  STATUS.md  workspace_test.c
Userspace/libc/ElfInterpreter/: Makefile
Userspace/libc/abis/fennix/generic/bits/: signal.h  socket.h  syscalls.h
Userspace/libc/abis/linux/x86_64/bits/: errno.h  signal.h  socket.h  syscalls.h
Userspace/libc/include/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  fenv.h  float.h  getopt.h  iconv.h  inttypes.h  limits.h  locale.h  math.h  pthread.h  pwd.h  regex.h  sched.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h
Userspace/libc/include/arpa/: inet.h
Userspace/libc/include/bits/: libc.h
Userspace/libc/include/bits/types/: signal.h  timespec.h
Userspace/libc/include/fennix/: syscalls.h
Userspace/libc/include/netinet/: in.h
Userspace/libc/include/sys/: ioctl.h  mman.h  select.h  socket.h  stat.h  time.h  types.h  uio.h  un.h  utsname.h  wait.h
Userspace/libc/interpreter/: CMakeLists.txt  Makefile  alloc.c  elf.h  helper.c  load.c  main.c  misc.h  nanoprintf.h  print.c  start.c
Userspace/libc/libs/: CMakeLists.txt
Userspace/libc/libs/libm/: CMakeLists.txt  libm.c
Userspace/libc/libs/libpthread/: CMakeLists.txt
Userspace/libc/libs/librt/: CMakeLists.txt
Userspace/libc/libs/libstdc++/: CMakeLists.txt
Userspace/libc/runtime/: CMakeLists.txt  Makefile  Scrt1.c  crt1.c
Userspace/libc/runtime/fennix/amd64/: CMakeLists.txt  crt1.c
Userspace/libc/runtime/fennix/i386/: crt1.c
Userspace/libc/runtime/linux/x86_64/: CMakeLists.txt  crt1.c
Userspace/libc/src/: CMakeLists.txt  Makefile  arith64.c  init.c  main.c  softfloat.c  syscall_check.cpp  tls.c
Userspace/libc/src/mem/: liballoc.c  liballoc_1_1.c  liballoc_1_1.h
Userspace/libc/src/print/: print.c  printf.c  printf.h
Userspace/libc/src/std/: assert.c  dirent.c  errno.c  fcntl.c  fenv.c  math.c  pthread.c  pwd.c  signal.c  stdio.c  stdlib.c  string.c  termios.c  time.c  unistd.c
Userspace/libc/src/std/arpa/: inet.c
Userspace/libc/src/std/sys/: ioctl.c  mman.c  socket.c  stat.c  utsname.c  wait.c
Userspace/libc/sysdeps/fennix/generic/: dl_start.c  syscall_check.cpp  syscalls.c  tls.c
Userspace/libc/sysdeps/linux/x86_64/: dl_start.c  stack_chk.c  syscall_check.cpp  syscalls.c  tls.c
Video/: Makefile
Virtualization/: IsVirtualizedEnvironment.cpp
arch/: CPU.cpp  UniversalAsynchronousReceiverTransmitter.cpp
audio/: Makefile
core/: README.md  acpi.cpp  console.cpp  cpu.cpp  crashhandler.hpp  debugger.cpp  disk.cpp  dsdt.cpp  interrupts_manager.cpp  lock.cpp  pci.cpp  power.cpp  random.cpp  (+7 more)
(+1929 files in other folders)
